@@ -1,0 +1,3 @@
+#pragma once
+
+declare sub ThreadDetach alias "fb_ThreadDetach"( byval thread as any ptr )
