@@ -42,6 +42,7 @@ Version 0.91.0:
 - Any function result may now be ignored at the call site (simply by not using the function result in any expression or assignment). Previously this was only allowed for functions returning integer types or pointers.
 - Thread-safe version of the FB graphics library (libfbgfxmt), used automatically if FB's threading functions are used or fbc's -mt command line option is given, just like the thread-safe version of the FB runtime library (libfbmt).
 - NEW/DELETE and NEW[]/DELETE[] can now be used with the dynamic STRING data type
+- ThreadDetach() function in fbthread.bi: alternative to ThreadWait() that cleans up the thread handle but does not wait for the thread to finish.
 
 [fixed]
 - dlltool syntax error when building a DLL without any EXPORTs
